adds routes for columns, small fixes
