# controllers/boards.js
@@ -39,9 +39,33 @@ const updateBoard = async (req, res) => {
   res.status(200).json({ message: "Successful update" });
 };
 
+const updateBoardBcg = async (req, res) => {
+  const { boardId } = req.params;
+  const { background } = req.body;
+  const result = await Board.findByIdAndUpdate(
+    boardId,
+    { background },
+    { new: true }
+  );
+  if (!result) {
+    throw HttpError(404, "Not found");
+  }
+  res.status(200).json({ message: "Background is updated" });
+};
+
+const deleteBoard = async (req, res) => {
+  const result = await Board.findByIdAndDelete(req.params.boardId);
+  if (!result) {
+    throw HttpError(404, "Not found");
+  }
+  res.status(200).json({ message: "Board deleted " });
+};
+
 module.exports = {
   getAll: ctrlWrapper(getAll),
   addBoard: ctrlWrapper(addBoard),
   updateBoard: ctrlWrapper(updateBoard),
+  updateBoardBcg: ctrlWrapper(updateBoardBcg),
   getBoard: ctrlWrapper(getBoard),
+  deleteBoard: ctrlWrapper(deleteBoard),
 };
