# models/board.js
@@ -8,6 +8,7 @@ const boardSchema = new Schema(
     title: {
       type: String,
       required: [true, "Title is required"],
+      unique: true,
     },
     icon: {
       type: String,
@@ -37,9 +38,14 @@ const updateSchema = Joi.object({
   background: Joi.string().required(),
 });
 
+const updateBcgSchema = Joi.object({
+  background: Joi.string().required(),
+});
+
 const schemas = {
   addSchema,
   updateSchema,
+  updateBcgSchema,
 };
 
 boardSchema.post("save", HandleMongooseError);
