# swagger.json
@@ -428,12 +428,11 @@
               "application/json": {
                 "schema": {
                   "type": "array",
-                  "$ref": "#/components/schemas/Board",
                   "items": {
                     "properties": {
                       "_id": {
                         "type": "string",
-                        "description": "Board ID",
+                        "description": "Board Id",
                         "example": "5f86793b8a7c4d2e"
                       },
                       "title": {
@@ -553,6 +552,16 @@
               "type": "string",
               "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0OTQyYjI4MzEyY2YzYWJlYTExNjMzNCIsImlhdCI6MTY4NzQzMjM1MSwiZXhwIjoxNjg3NTE4NzUxfQ.DCEB2Q0lghWYieYxiZohu4uMMpwMYFa55XOqMgggVVg"
             }
+          },
+          {
+            "name": "boardId",
+            "in": "path",
+            "description": "Board ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "649885bb8cfd32ed13fd42d3"
+            }
           }
         ],
         "requestBody": {
@@ -604,6 +613,125 @@
           },
           "400": {
             "description": "Validation error (missing fields in body)"
+          },
+          "404": {
+            "description": "Board id (from params) not found"
+          }
+        }
+      },
+      "patch": {
+        "summary": "Update board background",
+        "tags": ["Boards"],
+        "parameters": [
+          {
+            "name": "Authorization Token",
+            "in": "header",
+            "description": "User authorization token",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0OTQyYjI4MzEyY2YzYWJlYTExNjMzNCIsImlhdCI6MTY4NzQzMjM1MSwiZXhwIjoxNjg3NTE4NzUxfQ.DCEB2Q0lghWYieYxiZohu4uMMpwMYFa55XOqMgggVVg"
+            }
+          },
+          {
+            "name": "boardId",
+            "in": "path",
+            "description": "Board ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "649885bb8cfd32ed13fd42d3"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "background": {
+                    "type": ["string", "null"],
+                    "description": "Board background(url/null)",
+                    "example": null
+                  }
+                },
+                "required": "background"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful update",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "example": "Background updated"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Problem with Authorization missing header, invalid token"
+          },
+          "400": {
+            "description": "Validation error (missing fields in body)"
+          },
+          "404": {
+            "description": "Board id (from params) not found"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Update board",
+        "tags": ["Boards"],
+        "parameters": [
+          {
+            "name": "Authorization Token",
+            "in": "header",
+            "description": "User authorization token",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY0OTQyYjI4MzEyY2YzYWJlYTExNjMzNCIsImlhdCI6MTY4NzQzMjM1MSwiZXhwIjoxNjg3NTE4NzUxfQ.DCEB2Q0lghWYieYxiZohu4uMMpwMYFa55XOqMgggVVg"
+            }
+          },
+          {
+            "name": "boardId",
+            "in": "path",
+            "description": "Board ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "649885bb8cfd32ed13fd42d3"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful delete",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "example": "Board deleted"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Problem with Authorization missing header, invalid token"
           },
           "404": {
             "description": "Board id (from params) not found"
